# FindArtists

./: .gitignore  CHANGELOG.md  FindArtists.py  LICENSE.md  ProxyPull.py  README.md  TEST FILE.ipynb  Test  about.html  artist_finder.py  changelog.html  contact.html  contributions.html  data_handler.py  documentation.html  export_file.py  file_management.py  find_artists.py  import_file.py  index.html  license.html  names_of_artists.csv  pyproject.toml  readme.html  setup.py  terms.html  throttle.ctrl  web-app.html  wikidata_scraper.py
FindArtists Exported Files/: _2023-02-13_12-29-28.csv
TEST DATA/: Names of Artists.xlsx
Test_Data/: Names of Artists.csv
css/: style.css
docs/: LICENSE.md  contact.html  data.py  data_handler.py  documentation.html  file_management.py  index.html  iptk_data.py  license.html  main.py  normalize.py  readme.html  terms.html  wikidata_scraper.py  wikipedia_scraper.py  wikiscraper.py
py/: common.py  find_artists.py  wikidata_scraper.py  wikipedia_scraper.py
script/: package-lock.json  package.json  script.js
src/: __init__.py  cache.py
src/find_artists/: __init__.py  file.py  find_artists.py  inventory.py  main.py
src/find_artists/api/: wikidata_scraper.py  wikipedia_scraper.py
src/find_artists/api/notebooks/: wiki_client.ipynb
src/find_artists/cache/: cache.py  cache_context_manager.py
src/find_artists/data_management/: data_cleaner.py
src/find_artists/notebooks/: primary_operation_flow.ipynb
src/find_artists/utils/log/: logger.py
src/scripts/: main.py
tests/: test_wikiscraper.py
