[project]
name = "FindArtists"
version = "0.0.1"
authors = [
  { name="Charlie Marshall", email="charlie.marshall1996@gmail.com" },
]
description = "Find recording artist data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"